# wow

./: .env.production  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vite.config.ts.timestamp-1746825595757-b362112d66ee7.mjs
anchor/: .gitignore  Anchor.toml  README.md  deploy.sh  package-lock.json  package.json
anchor/programs/wall-of-wish/: Cargo.toml
anchor/programs/wall-of-wish/src/: lib.rs
anchor/tests/: wall-of-wish.ts
public/: _vercel.js
src/: App.tsx  index.css
src/components/: CivicAuthProvider.tsx  CustomUserButton.tsx  WalletContextProvider.tsx  WalletTools.tsx  WishCard.tsx  WishForm.tsx  Wishes.tsx
src/hooks/: useCivicWallet.ts
src/lib/: auth-helpers.ts  rpc-manager.ts  solana.ts
src/lib/anchor/: idl.ts
src/pages/: Index.tsx
